--- a/02_BUTTON/.vscode/settings.json
+++ b/02_BUTTON/.vscode/settings.json
@@ -14,5 +14,6 @@
     "--background-index",
     "--query-driver=C:\\Users\\Yazid\\.espressif\\tools\\xtensa-esp-elf\\esp-14.2.0_20241119\\xtensa-esp-elf\\bin\\xtensa-esp32-elf-gcc.exe",
     "--compile-commands-dir=${workspaceFolder}\\build"
-  ]
+  ],
+  "idf.flashType": "UART"
 }
